--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -188,7 +188,8 @@ jobs:
         qt: [qt_no, 5.15.2, 6.6.1]
         build_type: [Debug, Release]
 
-    runs-on: macos-latest
+    # As "macOS 14" is paid and aqt can't install to "macOS 14 Arm64"
+    runs-on: macos-13
 
     if: "!contains(github.event.head_commit.message, 'CI skip') && !contains(github.event.head_commit.message, 'Skip CI')"
     timeout-minutes: 30
